# dori_ros2

./: .gitignore  CODE_OF_CONDUCT.md  CODING_RULES.md  CONTRIBUTING.md  IsaacSim.sh  README.md  SECURITY.md  activate_isaac_sim_ros.sh  environment.yml  params.yaml  requirements.txt  setting.txt
.github/workflows/: codeql.yml  dependency-review.yml  topic-lint.yml  topic-map-lint.yml
Autonomous_Drive/: DRIVING_LOGIC.md  openai_bev_autodrive.py  rgb_depth_bev_current.py  run_openai_autonomy.sh
Visions/: depth_image_viz.py  image.py  ros2_test.py  rtabmap_rgbd_pipeline.launch.py  view.py
assets/icon/: dori.ai  dori_text.ai
campus_documents/raw/: dgist_directions.txt
config/: ros2_topics.yaml
data/campus/indexed/: campus_knowledge.json  dgist_directions.json  facility_edu.json  facility_welfare.json
data/campus/raw/: dgist_directions.txt  facility_edu.txt  facility_research.txt  facility_welfare.txt
docs/: README.md  index.md
docs/dev/: README.md  actions.adoc  architecture.md  nodes.adoc  parameters.adoc  services.adoc  temp.md  topics.adoc  web-style.md
docs/user/: manual.adoc
keyboard_Drive/: unified.py
ros2_ws/src/bringup/: CMakeLists.txt  package.xml
ros2_ws/src/dashboard_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/dashboard_pkg/dashboard_pkg/: dori_bridge.py  knowledge_api.py
ros2_ws/src/dashboard_pkg/launch/: dashboard.launch.py
ros2_ws/src/hri_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/interaction_pkg/: package.xml
ros2_ws/src/llm_pkg/: README.md  package.xml  requirements.txt  setup.py
ros2_ws/src/navigation_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/navigation_interfaces/action/: Navigate.action
ros2_ws/src/navigation_pkg/: package.xml  setup.py
ros2_ws/src/perception_camera_cpp/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/perception_camera_cpp/src/: depth_camera_node.cpp
ros2_ws/src/perception_pkg/: README.md  package.xml  setup.py
ros2_ws/src/stt_pkg/: requirements.txt  setup.py
ros2_ws/src/system_monitor_pkg/: setup.py
ros2_ws/src/tts_pkg/: package.xml  setup.cfg  setup.py
src/bringup/: package.xml
src/bringup/launch/: hri.launch.py  interaction.launch.py  robot.launch.py  robot_dev.launch.py  voice_interface.launch.py
src/cubemars_hardware/src/: can.cpp  system.cpp
src/cubesim_pkg/: index.html  package-lock.json  package.json  package.xml
src/cubesim_pkg/src/: App.jsx
src/cubesim_pkg/web/: package.json
src/dashboard_pkg/: package.xml  setup.cfg  setup.py
src/dashboard_pkg/dashboard_pkg/: knowledge_api.py
src/dashboard_pkg/launch/: cubesim.launch.py  dashboard.launch.py
src/hri_pkg/: requirements.txt  setup.py
src/hri_pkg/hri_pkg/: camera_node.py  face_detection_node.py  facial_expression_node.py  gesture_recognition_node.py  person_detection_node.py
src/hri_pkg/launch/: hri.launch.py  hri_manager.launch.py
src/interaction_pkg/: package.xml  setup.py
src/interaction_pkg/interaction_pkg/: hri_manager_node.py
src/interaction_pkg/resource/: interaction_pkg
src/llm_pkg/: requirements.txt
src/llm_pkg/launch/: robot.launch.py
src/llm_pkg/llm_pkg/: build_index.py  llm_node.py  paths.py
src/navigation_pkg/: setup.py
src/navigation_pkg/navigation_pkg/: navigator.py
src/perception_pkg/: package.xml
src/perception_pkg/perception_pkg/: depth_camera_node.py  landmark_detection_node.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: bldc_controllers.yaml  cubemars_mit.urdf.xacro
src/robot_bringup/launch/: system.launch.py  system_real.launch.py
src/robot_drive/: CMakeLists.txt  package.xml
src/robot_drive/config/: drive_params.yaml
src/robot_drive/include/robot_drive/: bldc_command_bridge_node.hpp  drive_controller_node.hpp
src/robot_drive/src/: bldc_command_bridge_node.cpp  drive_controller_node.cpp
src/robot_error/: CMakeLists.txt  package.xml
src/robot_error/src/: error_manager_node.cpp
src/robot_input/: CMakeLists.txt  package.xml
src/robot_input/include/robot_input/: keyboard_input_node.hpp  virtual_vlm_input_node.hpp
src/robot_input/src/: keyboard_input_node.cpp  virtual_vlm_input_node.cpp
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: CommandFeedback.msg  MitCommand.msg  SystemError.msg  TransformStep.msg  TransformStepResult.msg
src/robot_supervisor/: CMakeLists.txt  package.xml
src/robot_supervisor/config/: supervisor_params.yaml
src/robot_supervisor/include/robot_supervisor/: mode_manager_node.hpp
src/robot_supervisor/src/: mode_manager_node.cpp
src/robot_transform/: CMakeLists.txt  package.xml
src/robot_transform/config/: dxl_bridge_params.yaml  transform_params.yaml
src/robot_transform/include/robot_transform/: dxl_bridge_node.hpp  dxl_state_publisher_node.hpp  fake_joint_states_node.hpp  transform_controller_node.hpp  transform_manager_node.hpp
src/robot_transform/src/: dxl_bridge_node.cpp  dxl_state_publisher_node.cpp  fake_joint_states_node.cpp  transform_controller_node.cpp  transform_manager_node.cpp
src/simulation_pkg/: package.xml
src/stt_pkg/: package.xml  setup.py
src/stt_pkg/models/: doridori_ko_linux_v4_0_0.ppn
src/stt_pkg/stt_pkg/: stt_node.py
src/system_monitor_pkg/: package.xml
src/system_monitor_pkg/resource/: system_monitor_pkg
src/tts_pkg/: requirements.txt
src/tts_pkg/tts_pkg/: tts_node.py
tools/crawler/: README.md  crawl_campus.py  parse_cafeteria_menu.py  url_list.txt
tools/parser/: README.md  parse_cafeteria_menu.py
tools/topic/: topic_lint.py
tools/topic_map/: topic_map_lint.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.css  App.jsx  index.css  panelTree.jsx  panelTree.jsx.bak
web/src/components/: FloatingPanel.css  FloatingPanel.jsx  FloatingWorkspace.css  FloatingWorkspace.jsx  Header.css  Header.jsx  MobileStack.css  MobileStack.jsx  Panel.css  Panel.jsx  Sidebar.css  Sidebar.jsx  Sidebar.jsx.bak  TopicPublisher.jsx
web/src/core/: demo.js  emotion.js  floatingPanels.js  i18n.js  i18nSlice.js  ros.js  store.js  url.js
web/src/hooks/: useDraggable.js  (+1 more)
(+124 files in other folders)
