<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.0</version>
  <description>robot_bringup package</description>
  <maintainer email="who@todo.todo">who</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>position_controllers</exec_depend>

  <exec_depend>robot_input</exec_depend>
  <exec_depend>robot_supervisor</exec_depend>
  <exec_depend>robot_drive</exec_depend>
  <exec_depend>robot_transform</exec_depend>
  <exec_depend>robot_error</exec_depend>
  <exec_depend>cubemars_hardware</exec_depend>
  <exec_depend>dynamixel_sdk_examples</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
