<?xml version="1.0"?>
<package format="3">
  <name>robot_drive</name>
  <version>0.0.0</version>
  <description>robot_drive package</description>
  <maintainer email="who@todo.todo">who</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>robot_msgs</depend>
  <depend>controller_manager_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
